Fixing build error